--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -123,18 +123,19 @@ main {
 
 /* REPOSITORIES */
 
-.container .profile-data .repositories h2{
+.container .profile-data .repositories h2, 
+.container .profile-data .eventList h2 {
   margin-bottom: 30px;
   text-align: center;
 }
 
-.container .profile-data .repositories ul{
+.container .profile-data .repositories ul {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
 
-.container .profile-data .repositories ul li a{
+.container .profile-data .repositories ul li a {
   padding: 20px;
   border: 1px solid grey;  
   margin: 20px;
@@ -146,6 +147,27 @@ main {
 .container .profile-data .repositories ul li a:hover{
   background-color:hotpink;
   color: #fff
+}
+
+
+/* EventList */
+
+.container .profile-data .eventList ul{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.container .profile-data .eventList ul li {
+  padding: 0;
+  border: none;
+  margin: 20px 0;
+  max-width: 520px;
+  display: block;
+}
+
+.container .profile-data .eventList ul li span {
+  font-weight: 700;
 }
 
 .container .profile-data.hide{
